--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <section class="container-fluid">
     
-    <div class="col-md-2 sidenav">
+    <div class="col-md-2 nav nav-header sidenav">
         <div class="login-main-text">
             <h2>Teachzy</h2>
             <div class="blockline py3"></div>
@@ -26,10 +26,10 @@
             <li><a href=""><i class="fa fa-book"></i> Online Books</a></li>
             <li><a href=""><i class="fa fa-gears"></i> Settings</a></li>
         </ul>
-        <ul class="list-unstyled ml-3">
+        <ul class="list-unstyled ml-3" style="padding-top: 120px;">
             <li><a href=""><i class="fa fa-sign-out"></i> Logout</a></li> 
         </ul>
-        <img src="assets/images/banner-footer.png" class="img-responsive center-block">
+        <a href="#"><img src="assets/images/banner-footer.png" class="img-responsive center-block"></a>
     </div>
 
     <div class="col-md-5 col-sm-12 col-xs-12 box-left">
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid mb3">
             <div class="col-md-9">
                 <img src="assets/images/img-content-1.png" class="img-responsive center-block">
                 <h2>User Experience Designer Fundamentals</h2>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
 
         <div class="container-fluid">
             <div class="col-md-6">
